# portfolio

./: .gitignore
docs/xpbd/demo/: index.html  xpbd-ea30d9cac143c29e.js
fluffr/: Cargo.toml  README.md
fluffr/benchmark/: Cargo.toml
fluffr/benchmark/benches/: bench.rs
fluffr/benchmark/schemas/: event.fbs  product.fbs  user.fbs
fluffr/benchmark/src/: event_generated.rs  lib.rs  product_generated.rs
fluffr/benchmark/tests/: encoded_sizes.rs
fluffr/fluffr_core/: Cargo.toml
fluffr/fluffr_core/src/: buffer.rs  file_kind.rs  filter.rs  lib.rs  merge.rs  read.rs  serialize.rs  verify.rs
fluffr/fluffr_derive/: Cargo.toml  LICENSE
fluffr/fluffr_derive/src/: data_macro.rs  helpers.rs  lib.rs  meta.rs  query.rs  row_macro.rs  table_macro.rs  union_macro.rs
fluffr/src/: lib.rs
instance_manager/: Cargo.toml
instance_manager/src/: instances.rs  lib.rs
terrain/: Cargo.toml  readme.md
terrain/assets/shaders/: terrain.wgsl
terrain/src/: buffer.rs  camera.rs  config.rs  debug.rs  lib.rs  main.rs  noise.rs  pipeline.rs  terrain_ui.rs
voxels/: Cargo.toml  Readme.md  readme.md
voxels/assets/shaders/: instancing.wgsl  voxel_base.wgsl  voxel_config.wgsl
voxels/src/: _sdf.rs  buffers.rs  camera.rs  constants.rs  debug.rs  lib.rs  main.rs  pipeline.rs  utils.rs
voxels/src/bits/: data.rs
voxels/src/index/: base.rs  index.rs
voxels/src/terrain/: debug.rs
xpbd/: Cargo.toml  README.md  index.html
xpbd/demo/: index.html
xpbd/src/: debug.rs  instance_manager.rs  lib.rs  main.rs  observers.rs
xpbd/src/instance_manager/: drain.rs
