[package]
name = "voxels"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
bevy = "0.17.2" 
bevy_debug = "0.0.1"
bitvec = "1.0.1"
bytemuck = "1.23.1"
derive_more = {version = "2.0.1", features = ["from", "display"] }
diagnostic = "0.6.4"
instance_manager = { path = "../instance_manager" }
memchr = "2.7.5"
noise = "0.9.0"
paste = "1.0.15"
rand = "0.9.1"
rayon = "1.10.0"
thiserror = "2.0.12"

