[package]
name = "xpbd"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
bevy = { version = "0.18.1", features = ["webgl2"] }
bevy_panorbit_camera = "0.34.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom03 = { package = "getrandom", version = "=0.3.4", features = ["wasm_js"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1