[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
flatbuffers = "25.12.19"
fluffr = "0.1.0"
prost = "0.14.3"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"



[dev-dependencies]
criterion = "0.8.2"
tempfile = "3"

[[bench]]
name = "bench"
harness = false



