[package]
name = "fluffr_derive"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"
description = "derive macros for fluffr"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
fluffr_core = { version = "0.1.0"}

